# pybitcoin

./: .gitignore  README.md  api.py  bitcoin_price.py  config.py  console_utils.py  i18n.py  log4pi.py  main.py  password.sha256  pyproject.toml  request_password.py
tests/: test_i18n_translations.py
translations/: de.json  en.json  es.json
